# ai-google-meet-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  jarvis.config.example.json
.omc/skills/: caddy-docker-compose-bcrypt-escaping-expertise.md  docker-caddy-port-routing-expertise.md  docker-glibc-mismatch-expertise.md  docker-readonly-config-mount-expertise.md  playwright-browser-version-mismatch-expertise.md
cmd/bot/: main.go
docker/: caddy-entrypoint.sh  entrypoint.sh
docs/: technical-details.md
docs/implementations/: implementation-20260307.md
docs/plans/: 2026-03-07-jarvis-desktop-design.md  2026-03-07-jarvis-desktop-plan.md  2026-03-07-unified-app-design.md  2026-03-07-unified-app-plan.md  2026-03-12-agent-mode-summary-audio-fix-design.md  2026-03-12-agent-mode-summary-audio-fix-plan.md  2026-03-12-video-recording-design.md  2026-03-12-video-recording-plan.md  2026-04-22-docker-vps-deployment-design.md  2026-04-22-sessions-ui-design.md  2026-04-22-sessions-ui-implementation.md
internal/bot/: bot.go
internal/config/: config.go  config_test.go
internal/llm/: openai.go  openai_test.go
internal/vexa/: client.go  ws.go
internal/web/: index.html  server.go
jarvis/: Cargo.toml
jarvis/src/: bot_bridge.rs  config.rs  db.rs  llm.rs  main.rs  process.rs  server.rs  sessions.rs  tools.rs  tts.rs
jarvis/src/assets/: index.html
jarvis/src/transcription/: cloud.rs  local.rs  mod.rs
scripts/: init-setup.sh  package-jarvis.sh
tests/: e2e-sessions.spec.js
(+6 files in other folders)
